src/objects/fferpcore__CompanyTaxInformation__c.object
<CustomObject>
    <customHelpPage>fferpcore__CompanyTaxInformationHelp</customHelpPage>
    <description>Contains the tax information for a company.</description>
    <fields>
        <fullName>fferpcore__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The VAT / GST tax code for this company.</description>
        <inlineHelpText>The VAT / GST tax code for this company.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Company Tax Information Records</relationshipLabel>
        <relationshipName>CompanyTaxInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCountryCode__c</fullName>
        <description>Code for the European Union country in which the company operates. You can update the entries in this custom picklist if required.
The country code is required for the correct reporting of VAT on cross-border trades within the European Union.</description>
        <inlineHelpText>The country code for this company. This is required for correct reporting of VAT on cross-border trades within the European Union.</inlineHelpText>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxType__c</fullName>
        <description>The type of tax to use for products sold by this company. For instance, GST, SUT or VAT.</description>
        <inlineHelpText>The type of tax to use for products sold by this company. For instance, GST, SUT or VAT.</inlineHelpText>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>SUT</fullName>
                </value>
                <value>
                    <fullName>VAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__VatGstGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this company is part of a VAT/GST group. The value of this checkbox is used when deciding where to get the default tax code to use.</description>
        <inlineHelpText>Indicates whether this company is part of a VAT/GST group. The value of this checkbox is used when deciding where to get the default tax code to use.</inlineHelpText>
        <label>VAT/GST Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatRegistrationNumber__c</fullName>
        <description>Identifying number used for VAT purposes.</description>
        <inlineHelpText>Identifying number used for tax purposes.</inlineHelpText>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Company Tax Information</label>
    <nameField>
        <label>Company Tax Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Tax Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>